--- a/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
@@ -7,7 +7,7 @@ To manage these roles,
 . Click *☰ > Users & Authentication*.
 . In the left navigation bar, click *Role Templates* and go to the *Cluster* or *Project/Namespaces* tab.
 
-=== Membership and Role Assignment
+== Membership and Role Assignment
 
 The projects and clusters accessible to non-administrative users is determined by _membership_. Membership is a list of users who have access to a specific cluster or project based on the roles they were assigned in that cluster or project. Each cluster and project includes a tab that a user with the appropriate permissions can use to manage membership.
 
@@ -20,7 +20,7 @@ Non-administrative users cannot access any existing projects/clusters by default
 ====
 
 
-=== Cluster Roles
+== Cluster Roles
 
 _Cluster roles_ are roles that you can assign to users, granting them access to a cluster. There are two primary cluster roles: `Owner` and `Member`.
 
@@ -32,11 +32,11 @@ These users have full control over the cluster and all resources in it.
 +
 These users can view most cluster level resources and create new projects.
 
-==== Custom Cluster Roles
+=== Custom Cluster Roles
 
 Rancher lets you assign _custom cluster roles_ to a standard user instead of the typical `Owner` or `Member` roles. These roles can be either a built-in custom cluster role or one defined by a Rancher administrator. They are convenient for defining narrow or specialized access for a standard user within a cluster. See the table below for a list of built-in custom cluster roles.
 
-==== Cluster Role Reference
+=== Cluster Role Reference
 
 The following table lists each built-in custom cluster role available and whether that level of access is included in the default cluster-level permissions, `Cluster Owner` and `Cluster Member`.
 
@@ -84,7 +84,7 @@ The following table lists each built-in custom cluster role available and whethe
 | ✓
 |===
 
-==== Manage Nodes Permissions
+=== Manage Nodes Permissions
 
 The following table lists the permissions available for the `Manage Nodes` role in RKE and RKE2.
 
@@ -110,7 +110,7 @@ When viewing the resources associated with default roles created by Rancher, if 
 ====
 
 
-=== Giving a Custom Cluster Role to a Cluster Member
+== Giving a Custom Cluster Role to a Cluster Member
 
 After an administrator xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/custom-roles.adoc[sets up a custom cluster role,] cluster owners and admins can then assign those roles to cluster members.
 
@@ -136,7 +136,7 @@ To assign any custom role to an existing cluster member,
 
 *Result:* The member has the assigned role.
 
-=== Project Roles
+== Project Roles
 
 _Project roles_ are roles that can be used to grant users access to a project. There are three primary project roles: `Owner`, `Member`, and `Read Only`.
 
@@ -166,11 +166,11 @@ Users assigned the `Owner` or `Member` role for a project automatically inherit 
 ====
 
 
-==== Custom Project Roles
+=== Custom Project Roles
 
 Rancher lets you assign _custom project roles_ to a standard user instead of the typical `Owner`, `Member`, or `Read Only` roles. These roles can be either a built-in custom project role or one defined by a Rancher administrator. They are convenient for defining narrow or specialized access for a standard user within a project. See the table below for a list of built-in custom project roles.
 
-==== Project Role Reference
+=== Project Role Reference
 
 The following table lists each built-in custom project role available in Rancher and whether it is also granted by the `Owner`, `Member`, or `Read Only` role.
 
@@ -283,13 +283,13 @@ The following table lists each built-in custom project role available in Rancher
 ====
 
 
-=== Defining Custom Roles
+== Defining Custom Roles
 
 As previously mentioned, custom roles can be defined for use at the cluster or project level. The context field defines whether the role will appear on the cluster member page, project member page, or both.
 
 When defining a custom role, you can grant access to specific resources or specify roles from which the custom role should inherit. A custom role can be made up of a combination of specific grants and inherited roles. All grants are additive. This means that defining a narrower grant for a specific resource *will not* override a broader grant defined in a role that the custom role is inheriting from.
 
-=== Default Cluster and Project Roles
+== Default Cluster and Project Roles
 
 By default, when a standard user creates a new cluster or project, they are automatically assigned an ownership role: either <<_cluster_roles,cluster owner>> or <<_project_roles,project owner>>. However, in some organizations, these roles may overextend administrative access. In this use case, you can change the default role to something more restrictive, such as a set of individual roles or a custom role.
 
@@ -308,7 +308,7 @@ For example, instead of assigning a role that inherits other roles (such as `clu
 ====
 
 
-=== Configuring Default Roles for Cluster and Project Creators
+== Configuring Default Roles for Cluster and Project Creators
 
 You can change the cluster or project role(s) that are automatically assigned to the creating user.
 
@@ -323,7 +323,7 @@ You can change the cluster or project role(s) that are automatically assigned to
 
 If you want to remove a default role, edit the permission and select *No* from the default roles option.
 
-=== Cluster Membership Revocation Behavior
+== Cluster Membership Revocation Behavior
 
 When you revoke the cluster membership for a standard user that's explicitly assigned membership to both the cluster _and_ a project within the cluster, that standard user <<_cluster_roles,loses their cluster roles>> but <<_project_roles,retains their project roles>>. In other words, although you have revoked the user's permissions to access the cluster and its nodes, the standard user can still:
 
@@ -332,7 +332,7 @@ When you revoke the cluster membership for a standard user that's explicitly ass
 
 If you want to completely revoke a user's access within a cluster, revoke both their cluster and project memberships.
 
-=== External `RoleTemplate` Behavior
+== External `RoleTemplate` Behavior
 
 In Rancher v2.9.0 and later, external `RoleTemplate` objects can only be created if the backing `ClusterRole` exists in the local cluster or the `ExternalRules` is set in your configuration.
 
