--- a/versions/v2.8/modules/en/nav.adoc
+++ b/versions/v2.8/modules/en/nav.adoc
@@ -1,22 +1,23 @@
 * xref:release-notes.adoc[]
+* About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
 ** xref:about-rancher/prime.adoc[]
 ** xref:about-rancher/overview.adoc[]
-*** xref:about-rancher/architecture/architecture.adoc[]
+** xref:about-rancher/architecture/architecture.adoc[]
 *** xref:about-rancher/architecture/recommendations.adoc[]
 *** xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc[]
 *** xref:about-rancher/architecture/rancher-server-and-components.adoc[]
 ** xref:about-rancher/concepts.adoc[]
 ** xref:about-rancher/glossary.adoc[]
-** xref:installation-and-upgrade/installation-and-upgrade.adoc[]
-*** xref:installation-and-upgrade/requirements/requirements.adoc[]
+* xref:installation-and-upgrade/installation-and-upgrade.adoc[Installation and Upgrades]
+** xref:installation-and-upgrade/requirements/requirements.adoc[]
 *** xref:installation-and-upgrade/requirements/install-docker.adoc[]
 *** xref:installation-and-upgrade/requirements/dockershim.adoc[]
 *** xref:installation-and-upgrade/requirements/port-requirements.adoc[]
 *** xref:installation-and-upgrade/requirements/helm-version-requirements.adoc[]
 **** xref:installation-and-upgrade/best-practices//best-practices.adoc[]
 *** xref:installation-and-upgrade/best-practices/deployment-strategy.adoc[]
-*** xref:installation-and-upgrade/best-practices/best-practices.adoc[]
+** xref:installation-and-upgrade/best-practices/best-practices.adoc[]
 *** xref:installation-and-upgrade/best-practices/tips-for-running-rancher.adoc[]
 *** xref:installation-and-upgrade/best-practices/tuning-rancher-at-scale.adoc[]
 *** xref:installation-and-upgrade/best-practices/tuning-etcd-for-large-installs.adoc[]
@@ -26,18 +27,18 @@
 *** xref:installation-and-upgrade/references/helm-chart-options.adoc[]
 *** xref:installation-and-upgrade/references/tls-settings.adoc[]
 *** xref:installation-and-upgrade/references/feature-flags.adoc[]
-*** xref:installation-and-upgrade/resources/resources.adoc[]
+** xref:installation-and-upgrade/resources/resources.adoc[]
 *** xref:installation-and-upgrade/resources/bootstrap-password.adoc[]
 *** xref:installation-and-upgrade/resources/tls-secrets.adoc[]
 *** xref:installation-and-upgrade/resources/custom-ca-root-certificates.adoc[]
 *** xref:installation-and-upgrade/resources/update-rancher-certificate.adoc[]
 *** xref:installation-and-upgrade/resources/upgrade-cert-manager.adoc[]
-*** xref:installation-and-upgrade/quick-start/quick-start.adoc[]
-**** xref:installation-and-upgrade/quick-start/deploy-rancher/deploy-rancher.adoc[]
+** xref:installation-and-upgrade/quick-start/quick-start.adoc[]
+*** xref:installation-and-upgrade/quick-start/deploy-rancher/deploy-rancher.adoc[]
 **** xref:installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc[]
 **** xref:installation-and-upgrade/quick-start/deploy-rancher/aws-marketplace.adoc[]
 **** xref:installation-and-upgrade/quick-start/deploy-rancher/equinix-metal.adoc[]
-**** xref:installation-and-upgrade/quick-start/deploy-workloads/deploy-workloads.adoc[]
+*** xref:installation-and-upgrade/quick-start/deploy-workloads/deploy-workloads.adoc[]
 **** xref:installation-and-upgrade/quick-start/deploy-workloads/workload-ingress.adoc[]
 **** xref:installation-and-upgrade/quick-start/deploy-workloads/nodeports.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/amazon-elb-load-balancer.adoc[]
@@ -45,26 +46,26 @@
 *** xref:installation-and-upgrade/infrastructure-setup/ha-k3s-kubernetes-cluster.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/ha-rke1-kubernetes-cluster.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/ha-rke2-kubernetes-cluster.adoc[]
-*** xref:installation-and-upgrade/infrastructure-setup/infrastructure-setup.adoc[]
+** xref:installation-and-upgrade/infrastructure-setup/infrastructure-setup.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/mysql-database-in-amazon-rds.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/nginx-load-balancer.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/nodes-in-amazon-ec2.adoc[]
 *** xref:installation-and-upgrade/install-kubernetes/k3s-for-rancher.adoc[]
-*** xref:installation-and-upgrade/install-kubernetes/install-kubernetes.adoc[]
+** xref:installation-and-upgrade/install-kubernetes/install-kubernetes.adoc[]
 *** xref:installation-and-upgrade/install-kubernetes/rke1-for-rancher.adoc[]
 *** xref:installation-and-upgrade/install-kubernetes/rke2-for-rancher.adoc[]
 *** xref:installation-and-upgrade/hosted-kubernetes/rancher-on-aks.adoc[]
 *** xref:installation-and-upgrade/hosted-kubernetes/rancher-on-amazon-eks.adoc[]
 *** xref:installation-and-upgrade/hosted-kubernetes/rancher-on-gke.adoc[]
-**** xref:installation-and-upgrade/hosted-kubernetes/cloud-marketplace/cloud-marketplace.adoc[]
-***** xref:installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/aws.adoc[]
+*** xref:installation-and-upgrade/hosted-kubernetes/cloud-marketplace/cloud-marketplace.adoc[]
+**** xref:installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/aws.adoc[]
 ***** xref:installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/adapter-requirements.adoc[]
 ***** xref:installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc[]
 ***** xref:installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/uninstall-adapter.adoc[]
 ***** xref:installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/common-issues.adoc[]
 **** xref:installation-and-upgrade/hosted-kubernetes/cloud-marketplace/supportconfig.adoc[]
-*** xref:installation-and-upgrade/other-installation-methods/other-installation-methods.adoc[]
-**** xref:installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc[]
+** xref:installation-and-upgrade/other-installation-methods/other-installation-methods.adoc[]
+*** xref:installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc[]
 **** xref:installation-and-upgrade/other-installation-methods/air-gapped/infrastructure-private-registry.adoc[]
 **** xref:installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc[]
 **** xref:installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc[]
@@ -78,11 +79,11 @@
 ** xref:installation-and-upgrade/install-rancher.adoc[]
 ** xref:installation-and-upgrade/upgrades.adoc[]
 ** xref:installation-and-upgrade/rollbacks.adoc[]
-*** xref:installation-and-upgrade/troubleshooting/troubleshooting.adoc[]
+** xref:installation-and-upgrade/troubleshooting/troubleshooting.adoc[]
 *** xref:installation-and-upgrade/troubleshooting/certificate-troubleshooting.adoc[]
 *** xref:installation-and-upgrade/troubleshooting/rancher-ha.adoc[]
-** xref:rancher-admin/rancher-admin.adoc[]
-**** xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[]
+* xref:rancher-admin/rancher-admin.adoc[Rancher Administration]
+*** xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[]
 **** xref:rancher-admin/users/authn-and-authz/configure-active-directory.adoc[]
 **** xref:rancher-admin/users/authn-and-authz/configure-azure-ad.adoc[]
 **** xref:rancher-admin/users/authn-and-authz/configure-freeipa.adoc[]
@@ -94,31 +95,31 @@
 **** xref:rancher-admin/users/authn-and-authz/configure-pingidentity.adoc[]
 **** xref:rancher-admin/users/authn-and-authz/create-local-users.adoc[]
 **** xref:rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc[]
-***** xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc[]
+**** xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/ms-adfs-for-rancher.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/rancher-for-ms-adfs.adoc[]
-***** xref:rancher-admin/users/authn-and-authz/openldap/openldap.adoc[]
+**** xref:rancher-admin/users/authn-and-authz/openldap/openldap.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/openldap/reference.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/shibboleth-saml/group-permissions.adoc[]
-***** xref:rancher-admin/users/authn-and-authz/shibboleth-saml/shibboleth-saml.adoc[]
+**** xref:rancher-admin/users/authn-and-authz/shibboleth-saml/shibboleth-saml.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/custom-roles.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/locked-roles.adoc[]
-***** xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/manage-role-based-access-control-rbac.adoc[]
+**** xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/manage-role-based-access-control-rbac.adoc[]
 **** xref:rancher-admin/users/authn-and-authz/enable-user-retention.adoc[]
 *** xref:rancher-admin/users/add-to-projects.adoc[]
-**** xref:rancher-admin/users/settings/settings.adoc[]
+*** xref:rancher-admin/users/settings/settings.adoc[]
 **** xref:rancher-admin/users/settings/api-keys.adoc[]
 **** xref:rancher-admin/users/settings/manage-node-templates.adoc[]
 **** xref:rancher-admin/users/settings/user-preferences.adoc[]
 **** xref:rancher-admin/users/settings/manage-cloud-credentials.adoc[]
 *** xref:rancher-admin/global-configuration/custom-branding.adoc[]
 *** xref:rancher-admin/global-configuration/global-default-private-registry.adoc[]
-**** xref:rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc[]
+*** xref:rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc[]
 **** xref:rancher-admin/global-configuration/provisioning-drivers/manage-cluster-drivers.adoc[]
 **** xref:rancher-admin/global-configuration/provisioning-drivers/manage-node-drivers.adoc[]
-**** xref:rancher-admin/global-configuration/rke1-templates/rke1-templates.adoc[]
+*** xref:rancher-admin/global-configuration/rke1-templates/rke1-templates.adoc[]
 **** xref:rancher-admin/global-configuration/rke1-templates/access-or-share-templates.adoc[]
 **** xref:rancher-admin/global-configuration/rke1-templates/apply-templates.adoc[]
 **** xref:rancher-admin/global-configuration/rke1-templates/creator-permissions.adoc[]
@@ -131,33 +132,33 @@
 *** xref:rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc[]
 *** xref:rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc[]
 *** xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc[]
-*** xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up-restore-and-disaster-recovery.adoc[]
+** xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up-restore-and-disaster-recovery.adoc[]
 *** xref:rancher-admin/back-up-restore-and-disaster-recovery/usage-guide.adoc[]
 **** xref:rancher-admin/back-up-restore-and-disaster-recovery/configuration/backup.adoc[]
-**** xref:rancher-admin/back-up-restore-and-disaster-recovery/configuration/configuration.adoc[]
+*** xref:rancher-admin/back-up-restore-and-disaster-recovery/configuration/configuration.adoc[]
 **** xref:rancher-admin/back-up-restore-and-disaster-recovery/configuration/examples.adoc[]
 **** xref:rancher-admin/back-up-restore-and-disaster-recovery/configuration/restore.adoc[]
 **** xref:rancher-admin/back-up-restore-and-disaster-recovery/configuration/storage.adoc[]
-*** xref:rancher-admin/cli/cli.adoc[]
+** xref:rancher-admin/cli/cli.adoc[]
 *** xref:rancher-admin/cli/kubectl.adoc[]
 *** xref:rancher-admin/cli/rancher-cli.adoc[]
 *** xref:rancher-admin/experimental-features/continuous-delivery.adoc[]
-*** xref:rancher-admin/experimental-features/experimental-features.adoc[]
+** xref:rancher-admin/experimental-features/experimental-features.adoc[]
 *** xref:rancher-admin/experimental-features/istio-traffic-management-features.adoc[]
 *** xref:rancher-admin/experimental-features/rancher-on-arm64.adoc[]
 *** xref:rancher-admin/experimental-features/unsupported-storage-drivers.adoc[]
-** xref:cluster-deployment/cluster-deployment.adoc[]
+* xref:cluster-deployment/cluster-deployment.adoc[Cluster Deployment]
 ** xref:cluster-deployment/node-requirements.adoc[]
-*** xref:cluster-deployment/production-checklist/production-checklist.adoc[]
+** xref:cluster-deployment/production-checklist/production-checklist.adoc[]
 *** xref:cluster-deployment/production-checklist/recommended-cluster-architecture.adoc[]
 *** xref:cluster-deployment/production-checklist/roles-for-nodes-in-kubernetes.adoc[]
 *** xref:cluster-deployment/production-checklist/tips-to-set-up-containers.adoc[]
-*** xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[]
-**** xref:cluster-deployment/hosted-kubernetes/aks/aks.adoc[]
+** xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[]
+*** xref:cluster-deployment/hosted-kubernetes/aks/aks.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/aks/configuration.adoc[]
-**** xref:cluster-deployment/hosted-kubernetes/eks/eks.adoc[]
+*** xref:cluster-deployment/hosted-kubernetes/eks/eks.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/eks/configuration.adoc[]
-**** xref:cluster-deployment/hosted-kubernetes/gke/gke.adoc[]
+*** xref:cluster-deployment/hosted-kubernetes/gke/gke.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/gke/configuration.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/gke/private-clusters.adoc[]
 *** xref:cluster-deployment/hosted-kubernetes/sync-clusters.adoc[]
@@ -169,33 +170,33 @@
 *** xref:cluster-deployment/set-up-cloud-providers/configure-in-tree-vsphere.adoc[]
 *** xref:cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc[]
 *** xref:cluster-deployment/set-up-cloud-providers/google-compute-engine.adoc[]
-*** xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[]
+** xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[]
 *** xref:cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/amazon.adoc[]
 *** xref:cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/vsphere.adoc[]
 ** xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[]
 ** xref:cluster-deployment/about-rancher-agents.adoc[]
 ** xref:cluster-deployment/rke1-vs-rke2.adoc[]
-*** xref:cluster-deployment/infra-providers/infra-providers.adoc[]
-**** xref:cluster-deployment/infra-providers/digitalocean/digitalocean.adoc[]
+** xref:cluster-deployment/infra-providers/infra-providers.adoc[]
+*** xref:cluster-deployment/infra-providers/digitalocean/digitalocean.adoc[]
 **** xref:cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc[]
 **** xref:cluster-deployment/infra-providers/digitalocean/node-template-configuration.adoc[]
-**** xref:cluster-deployment/infra-providers/aws/aws.adoc[]
+*** xref:cluster-deployment/infra-providers/aws/aws.adoc[]
 **** xref:cluster-deployment/infra-providers/aws/machine-configuration.adoc[]
 **** xref:cluster-deployment/infra-providers/aws/node-template-configuration.adoc[]
-**** xref:cluster-deployment/infra-providers/azure/azure.adoc[]
+*** xref:cluster-deployment/infra-providers/azure/azure.adoc[]
 **** xref:cluster-deployment/infra-providers/azure/machine-configuration.adoc[]
 **** xref:cluster-deployment/infra-providers/azure/node-template-configuration.adoc[]
-**** xref:cluster-deployment/infra-providers/nutanix/nutanix.adoc[]
+*** xref:cluster-deployment/infra-providers/nutanix/nutanix.adoc[]
 **** xref:cluster-deployment/infra-providers/nutanix/provision-kubernetes-clusters-in-aos.adoc[]
 **** xref:cluster-deployment/infra-providers/nutanix/node-template-configuration.adoc[]
-**** xref:cluster-deployment/infra-providers/vsphere/vsphere.adoc[]
+*** xref:cluster-deployment/infra-providers/vsphere/vsphere.adoc[]
 **** xref:cluster-deployment/infra-providers/vsphere/best-practices.adoc[]
 **** xref:cluster-deployment/infra-providers/vsphere/create-credentials.adoc[]
 **** xref:cluster-deployment/infra-providers/vsphere/create-a-vm-template.adoc[]
 **** xref:cluster-deployment/infra-providers/vsphere/provision-kubernetes-clusters-in-vsphere.adoc[]
 **** xref:cluster-deployment/infra-providers/vsphere/node-template-configuration.adoc[]
 **** xref:cluster-deployment/infra-providers/vsphere/shutdown-vm.adoc[]
-*** xref:cluster-deployment/custom-clusters/custom-clusters.adoc[]
+** xref:cluster-deployment/custom-clusters/custom-clusters.adoc[]
 *** xref:cluster-deployment/custom-clusters/rancher-agent-options.adoc[]
 **** xref:cluster-deployment/custom-clusters/windows/azure-storageclass-configuration.adoc[]
 **** xref:cluster-deployment/custom-clusters/windows/network-requirements-for-host-gateway.adoc[]
@@ -204,7 +205,8 @@
 **** xref:cluster-deployment/custom-clusters/windows/workload-migration-guidance.adoc[]
 ** xref:cluster-deployment/register-existing-clusters.adoc[]
 ** xref:cluster-deployment/register-existing-clusters-troubleshooting.adoc[]
-**** xref:cluster-admin/manage-clusters/access-clusters/access-clusters.adoc[]
+* Cluster Administration
+*** xref:cluster-admin/manage-clusters/access-clusters/access-clusters.adoc[]
 **** xref:cluster-admin/manage-clusters/access-clusters/add-users-to-clusters.adoc[]
 **** xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc[]
 **** xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc[]
@@ -218,12 +220,12 @@
 **** xref:cluster-admin/manage-clusters/persistent-storage/use-external-ceph-driver.adoc[]
 ***** xref:cluster-admin/manage-clusters/persistent-storage/examples/nfs-storage.adoc[]
 ***** xref:cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc[]
-***** xref:cluster-admin/manage-clusters/persistent-storage/examples/examples.adoc[]
+**** xref:cluster-admin/manage-clusters/persistent-storage/examples/examples.adoc[]
 ***** xref:cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc[]
-**** xref:cluster-admin/manage-clusters/install-cluster-autoscaler/install-cluster-autoscaler.adoc[]
+*** xref:cluster-admin/manage-clusters/install-cluster-autoscaler/install-cluster-autoscaler.adoc[]
 **** xref:cluster-admin/manage-clusters/install-cluster-autoscaler/use-aws-ec2-auto-scaling-groups.adoc[]
 *** xref:cluster-admin/manage-clusters/cluster-templates.adoc[]
-*** xref:cluster-admin/manage-clusters/manage-clusters.adoc[]
+** xref:cluster-admin/manage-clusters/manage-clusters.adoc[]
 *** xref:cluster-admin/manage-clusters/nodes-and-node-pools.adoc[]
 *** xref:cluster-admin/manage-clusters/projects-and-namespaces.adoc[]
 *** xref:cluster-admin/manage-clusters/rotate-certificates.adoc[]
@@ -231,7 +233,7 @@
 *** xref:cluster-admin/kubernetes-resources/configmaps.adoc[]
 *** xref:cluster-admin/kubernetes-resources/create-services.adoc[]
 **** xref:cluster-admin/kubernetes-resources/horizontal-pod-autoscaler/about-hpas.adoc[]
-**** xref:cluster-admin/kubernetes-resources/horizontal-pod-autoscaler/horizontal-pod-autoscaler.adoc[]
+*** xref:cluster-admin/kubernetes-resources/horizontal-pod-autoscaler/horizontal-pod-autoscaler.adoc[]
 **** xref:cluster-admin/kubernetes-resources/horizontal-pod-autoscaler/manage-hpas-with-kubectl.adoc[]
 **** xref:cluster-admin/kubernetes-resources/horizontal-pod-autoscaler/manage-hpas-with-ui.adoc[]
 **** xref:cluster-admin/kubernetes-resources/horizontal-pod-autoscaler/test-hpas-with-kubectl.adoc[]
@@ -240,51 +242,52 @@
 **** xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/add-ingresses.adoc[]
 **** xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/ingress-configuration.adoc[]
 **** xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/layer-4-and-layer-7-load-balancing.adoc[]
-**** xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/load-balancer-and-ingress-controller.adoc[]
+*** xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/load-balancer-and-ingress-controller.adoc[]
 **** xref:cluster-admin/kubernetes-resources/workloads-and-pods/add-a-sidecar.adoc[]
 **** xref:cluster-admin/kubernetes-resources/workloads-and-pods/deploy-workloads.adoc[]
 **** xref:cluster-admin/kubernetes-resources/workloads-and-pods/roll-back-workloads.adoc[]
 **** xref:cluster-admin/kubernetes-resources/workloads-and-pods/upgrade-workloads.adoc[]
-**** xref:cluster-admin/kubernetes-resources/workloads-and-pods/workloads-and-pods.adoc[]
-*** xref:cluster-admin/backups-and-restore/backups-and-restore.adoc[]
+*** xref:cluster-admin/kubernetes-resources/workloads-and-pods/workloads-and-pods.adoc[]
+** xref:cluster-admin/backups-and-restore/backups-and-restore.adoc[]
 *** xref:cluster-admin/backups-and-restore/backups-without-uprading-rancher.adoc[]
 *** xref:cluster-admin/backups-and-restore/backups.adoc[]
 *** xref:cluster-admin/backups-and-restore/restore.adoc[]
 ** xref:cluster-admin/namespaces.adoc[]
 *** xref:cluster-admin/project-admin/pod-security-policies.adoc[]
-**** xref:cluster-admin/project-admin/project-resource-quotas/project-resource-quotas.adoc[]
+*** xref:cluster-admin/project-admin/project-resource-quotas/project-resource-quotas.adoc[]
 **** xref:cluster-admin/project-admin/project-resource-quotas/resource-quotas-in-projects.adoc[]
 **** xref:cluster-admin/project-admin/project-resource-quotas/override-default-limit-in-namespaces.adoc[]
 **** xref:cluster-admin/project-admin/project-resource-quotas/resource-quota-types.adoc[]
 **** xref:cluster-admin/project-admin/project-resource-quotas/set-container-default-resource-limits.adoc[]
 *** xref:cluster-admin/project-admin/project-administration.adoc[]
 *** xref:cluster-admin/helm-charts-in-rancher/create-apps.adoc[]
-*** xref:cluster-admin/helm-charts-in-rancher/helm-charts-in-rancher.adoc[]
+** xref:cluster-admin/helm-charts-in-rancher/helm-charts-in-rancher.adoc[]
+* Security
 ** xref:security/security-overview.adoc[]
 ** xref:security/cves.adoc[]
 ** xref:security/kubernetes-security-best-practices.adoc[]
 ** xref:security/rancher-security-best-practices.adoc[]
-*** xref:security/rancher-webhook/rancher-webhook.adoc[]
+** xref:security/rancher-webhook/rancher-webhook.adoc[]
 *** xref:security/rancher-webhook/expired-webhook-certificate-rotation.adoc[]
 *** xref:security/rancher-webhook/hardening.adoc[]
 *** xref:security/selinux-rpm/about-rancher-selinux.adoc[]
 **** xref:security/selinux-rpm//selinux-rpm.adoc[]
 *** xref:security/selinux-rpm/about-rke2-selinux.adoc[]
-*** xref:security/hardening-guides/hardening-guides.adoc[]
-**** xref:security/hardening-guides/k3s/k3s.adoc[]
+** xref:security/hardening-guides/hardening-guides.adoc[]
+*** xref:security/hardening-guides/k3s/k3s.adoc[]
 **** xref:security/hardening-guides/k3s/self-assessment-guide-with-cis-v1.23-k8s-v1.23.adoc[]
 **** xref:security/hardening-guides/k3s/self-assessment-guide-with-cis-v1.24-k8s-v1.24.adoc[]
 **** xref:security/hardening-guides/k3s/self-assessment-guide-with-cis-v1.7-k8s-v1.25-v1.26-v1.27.adoc[]
-**** xref:security/hardening-guides/rke1/rke1.adoc[]
+*** xref:security/hardening-guides/rke1/rke1.adoc[]
 **** xref:security/hardening-guides/rke1/self-assessment-guide-with-cis-v1.23-k8s-v1.23.adoc[]
 **** xref:security/hardening-guides/rke1/self-assessment-guide-with-cis-v1.24-k8s-v1.24.adoc[]
 **** xref:security/hardening-guides/rke1/self-assessment-guide-with-cis-v1.7-k8s-v1.25-v1.26-v1.27.adoc[]
-**** xref:security/hardening-guides/rke2/rke2.adoc[]
+*** xref:security/hardening-guides/rke2/rke2.adoc[]
 **** xref:security/hardening-guides/rke2/self-assessment-guide-with-cis-v1.23-k8s-v1.23.adoc[]
 **** xref:security/hardening-guides/rke2/self-assessment-guide-with-cis-v1.24-k8s-v1.24.adoc[]
 **** xref:security/hardening-guides/rke2/self-assessment-guide-with-cis-v1.7-k8s-v1.25-v1.26-v1.27.adoc[]
 *** xref:security/hardening-guides/upgrade-a-hardened-cluster-to-k8s-v1-25.adoc[]
-*** xref:security/cis-scans/cis-scans.adoc[]
+** xref:security/cis-scans/cis-scans.adoc[]
 *** xref:security/cis-scans/rbac-for-cis-scans.adoc[]
 *** xref:security/cis-scans/how-to.adoc[]
 *** xref:security/cis-scans/install-rancher-cis-benchmark.adoc[]
@@ -308,33 +311,34 @@
 ** xref:security/secrets-hub.adoc[]
 ** xref:security/open-ports-with-firewalld.adoc[]
 ** xref:security/encrypting-http.adoc[]
-** xref:integrations/integrations.adoc[]
+* xref:integrations/integrations.adoc[Integrations]
 ** xref:integrations/kubernetes-distributions.adoc[]
 ** xref:integrations/rancher-extensions.adoc[]
-*** xref:integrations/harvester/harvester.adoc[]
+** xref:integrations/harvester/harvester.adoc[]
 *** xref:integrations/harvester/overview.adoc[]
-*** xref:integrations/longhorn/longhorn.adoc[]
+** xref:integrations/longhorn/longhorn.adoc[]
 *** xref:integrations/longhorn/overview.adoc[]
-*** xref:integrations/neuvector/neuvector.adoc[]
+** xref:integrations/neuvector/neuvector.adoc[]
 *** xref:integrations/neuvector/overview.adoc[]
 ** xref:integrations/kubewarden.adoc[]
 ** xref:integrations/elemental.adoc[]
 *** xref:integrations/fleet/architecture.adoc[]
-*** xref:integrations/fleet/fleet.adoc[]
+** xref:integrations/fleet/fleet.adoc[]
 *** xref:integrations/fleet/overview.adoc[]
 *** xref:integrations/fleet/use-fleet-behind-a-proxy.adoc[]
 *** xref:integrations/fleet/windows-support.adoc[]
 ** xref:integrations/rancher-desktop.adoc[]
 *** xref:integrations/cluster-api/overview.adoc[]
-*** xref:integrations/cluster-api/cluster-api.adoc[]
+** xref:integrations/cluster-api/cluster-api.adoc[]
 ** xref:integrations/opa-gatekeeper.adoc[]
+* Observability
 ** xref:observability/rancher-cluster-tools.adoc[]
 ** xref:observability/rancher-project-tools.adoc[]
 *** xref:observability/logging/best-practices.adoc[]
-**** xref:observability/logging/custom-resource-configuration/custom-resource-configuration.adoc[]
+*** xref:observability/logging/custom-resource-configuration/custom-resource-configuration.adoc[]
 **** xref:observability/logging/custom-resource-configuration/flows-and-clusterflows.adoc[]
 **** xref:observability/logging/custom-resource-configuration/outputs-and-clusteroutputs.adoc[]
-*** xref:observability/logging/logging.adoc[]
+** xref:observability/logging/logging.adoc[]
 *** xref:observability/logging/logging-architecture.adoc[]
 *** xref:observability/logging/logging-helm-chart-options.adoc[]
 *** xref:observability/logging/rbac-for-logging.adoc[]
@@ -349,7 +353,7 @@
 *** xref:observability/monitoring-and-dashboards/promql-expressions.adoc[]
 *** xref:observability/monitoring-and-dashboards/rbac-for-monitoring.adoc[]
 *** xref:observability/monitoring-and-dashboards/windows-support.adoc[]
-*** xref:observability/monitoring-and-dashboards/monitoring-and-dashboards.adoc[]
+** xref:observability/monitoring-and-dashboards/monitoring-and-dashboards.adoc[]
 *** xref:observability/monitoring-and-dashboards/enable-monitoring.adoc[]
 *** xref:observability/monitoring-and-dashboards/uninstall-monitoring.adoc[]
 *** xref:observability/monitoring-and-dashboards/set-up-monitoring-for-workloads.adoc[]
@@ -359,44 +363,46 @@
 **** xref:observability/monitoring-and-dashboards/configuration/receivers.adoc[]
 **** xref:observability/monitoring-and-dashboards/configuration/routes.adoc[]
 **** xref:observability/monitoring-and-dashboards/configuration/servicemonitors-and-podmonitors.adoc[]
-***** xref:observability/monitoring-and-dashboards/configuration/advanced/advanced.adoc[]
+**** xref:observability/monitoring-and-dashboards/configuration/advanced/advanced.adoc[]
 ***** xref:observability/monitoring-and-dashboards/configuration/advanced/alertmanager.adoc[]
 ***** xref:observability/monitoring-and-dashboards/configuration/advanced/prometheus.adoc[]
 ***** xref:observability/monitoring-and-dashboards/configuration/advanced/prometheusrules.adoc[]
-**** xref:observability/monitoring-and-dashboards/configuration/configuration.adoc[]
+*** xref:observability/monitoring-and-dashboards/configuration/configuration.adoc[]
 **** xref:observability/monitoring-and-dashboards/configuration/debug-high-memory-usage.adoc[]
 **** xref:observability/monitoring-and-dashboards/customizing-dashboard/create-persistent-grafana-dashboard.adoc[]
 **** xref:observability/monitoring-and-dashboards/customizing-dashboard/customize-grafana-dashboard.adoc[]
-**** xref:observability/monitoring-and-dashboards/prometheus-federator/prometheus-federator.adoc[]
+*** xref:observability/monitoring-and-dashboards/prometheus-federator/prometheus-federator.adoc[]
 **** xref:observability/monitoring-and-dashboards/prometheus-federator/rbac.adoc[]
 **** xref:observability/monitoring-and-dashboards/prometheus-federator/enable-prometheus-federator.adoc[]
 **** xref:observability/monitoring-and-dashboards/prometheus-federator/uninstall-prometheus-federator.adoc[]
 **** xref:observability/monitoring-and-dashboards/prometheus-federator/set-up-workloads.adoc[]
 **** xref:observability/monitoring-and-dashboards/prometheus-federator/customize-grafana-dashboards.adoc[]
 **** xref:observability/monitoring-and-dashboards/prometheus-federator/install-project-monitors.adoc[]
-*** xref:observability/istio/istio.adoc[]
+** xref:observability/istio/istio.adoc[]
 *** xref:observability/istio/rbac.adoc[]
 *** xref:observability/istio/cpu-and-memory-allocations.adoc[]
 *** xref:observability/istio/disable-istio.adoc[]
 **** xref:observability/istio/configuration/pod-security-policies.adoc[]
-**** xref:observability/istio/configuration/configuration.adoc[]
+*** xref:observability/istio/configuration/configuration.adoc[]
 **** xref:observability/istio/configuration/selectors-and-scrape-configurations.adoc[]
 **** xref:observability/istio/configuration/project-network-isolation.adoc[]
 **** xref:observability/istio/configuration/install-istio-on-rke2-cluster.adoc[]
 **** xref:observability/istio/guides/enable-istio-in-cluster.adoc[]
 **** xref:observability/istio/guides/enable-istio-in-namespace.adoc[]
 **** xref:observability/istio/guides/set-up-traffic-management.adoc[]
-**** xref:observability/istio/guides/guides.adoc[]
+*** xref:observability/istio/guides/guides.adoc[]
 **** xref:observability/istio/guides/generate-and-view-traffic.adoc[]
 **** xref:observability/istio/guides/set-up-istio-gateway.adoc[]
 **** xref:observability/istio/guides/use-istio-sidecar.adoc[]
+* API
 ** xref:api/quickstart.adoc[]
 *** xref:api/workflows/projects.adoc[]
 ** xref:api/api-tokens.adoc[]
 ** xref:api/v3-rancher-api-guide.adoc[]
 ** xref:api/reference.adoc[]
+* Troubleshooting
 ** xref:troubleshooting/general-troubleshooting.adoc[]
-*** xref:troubleshooting/kubernetes-components/kubernetes-components.adoc[]
+** xref:troubleshooting/kubernetes-components/kubernetes-components.adoc[]
 *** xref:troubleshooting/kubernetes-components/troubleshooting-controlplane-nodes.adoc[]
 *** xref:troubleshooting/kubernetes-components/troubleshooting-etcd-nodes.adoc[]
 *** xref:troubleshooting/kubernetes-components/troubleshooting-nginx-proxy.adoc[]
@@ -405,6 +411,7 @@
 *** xref:troubleshooting/other-troubleshooting-tips/networking.adoc[]
 *** xref:troubleshooting/other-troubleshooting-tips/kubernetes-resources.adoc[]
 *** xref:troubleshooting/other-troubleshooting-tips/dns.adoc[]
+* FAQ
 ** xref:faq/technical-items.adoc[]
 ** xref:faq/telemetry.adoc[]
 ** xref:faq/rancher-is-no-longer-needed.adoc[]
